--- a/FileOperatorDotNet/MainWindow.xaml
+++ b/FileOperatorDotNet/MainWindow.xaml
@@ -125,7 +125,7 @@
                         <Button Name="button_UnMap" Grid.Row="0" Grid.Column="3" Click="button_UnMap_Click">Unmap &amp; Close</Button>
                         <Button Name="button_Flush" Grid.Row="1" Grid.Column="0" Click="button_Flush_Click">Flush</Button>
                         <TextBox Name="textBox_FlushNum" Grid.Row="1" Grid.Column="1" />
-                        <Button Name="button_Query" Grid.Row="2" Grid.Column="0" Content="Query" />
+                        <Button Name="button_Query" Grid.Row="2" Grid.Column="0" Content="Query" Click="button_Query_Click"/>
                         <TextBox Name="textBox_deviceLetter" Grid.Row="2" Grid.Column="1" />
                         <Button Name="button_BatchTest" Grid.Row="4" Grid.Column="0" Click="button_BatchTest_Click">Batch Test</Button>
                         
