--- a/FileOperatorDotNet/MainWindow.xaml
+++ b/FileOperatorDotNet/MainWindow.xaml
@@ -1,11 +1,11 @@
 ﻿<Window x:Class="FileOperatorDotNet.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" WindowStyle="None"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FileOperatorDotNet"
         mc:Ignorable="d"
-        Title="File Operator" Height="500" Width="525">
+        Title="File Operator" Height="500" Width="800" MouseLeftButtonDown="OnDrag">
     <Window.Resources>
         <Style x:Key="gridMargin" TargetType="Control">
             <Setter Property="Margin" Value="1"/>
@@ -18,10 +18,31 @@
                 </Border>
             </Grid>
         </ControlTemplate>
+
+
+
     </Window.Resources>
     <Grid>
-        <TabControl>
-            <TabItem Header="Read">
+        <Grid.Background>
+            <ImageBrush ImageSource="img\back.jpg" />
+        </Grid.Background>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="1*" />
+          <ColumnDefinition Width="1*" />
+          <ColumnDefinition Width="1*" />
+          <ColumnDefinition Width="1*" />
+          <ColumnDefinition Width="1*" />
+          <ColumnDefinition Width="1*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <TabControl Grid.ColumnSpan="6" Grid.RowSpan="2" Style="{StaticResource TabCTR1}" Margin="0 0 0 0" VerticalAlignment="Top"> 
+            <local:ImageTabItem  Header="Read" NorImage="img\read_n.png" HorImage="img\read_h.png" DownImage="img\read_ck.png" Style="{DynamicResource ImageTabItemStyle}" >
+                <local:ImageTabItem.Background>
+                  <SolidColorBrush Opacity="100" />
+                </local:ImageTabItem.Background>
                 <Border Background="GhostWhite" BorderBrush="Gainsboro" BorderThickness="1">
                     <local:GridWithMargins IsSharedSizeScope="True">
                         <Grid.ColumnDefinitions>
@@ -59,8 +80,11 @@
                         </Border>
                     </local:GridWithMargins>
                 </Border>
-            </TabItem>
-            <TabItem Header="Write">
+            </local:ImageTabItem>
+            <local:ImageTabItem Header="Write" NorImage="img/write_n.png" HorImage="img/write_h.png" DownImage="img/write_ck.png" Style="{DynamicResource ImageTabItemStyle}">
+              <local:ImageTabItem.Background>
+                <SolidColorBrush Opacity="100" />
+              </local:ImageTabItem.Background>
                 <Border Background="GhostWhite" BorderBrush="Gainsboro" BorderThickness="1">
                     <local:GridWithMargins IsSharedSizeScope="True">
                         <Grid.ColumnDefinitions>
@@ -101,8 +125,11 @@
                         </Border>
                     </local:GridWithMargins>
                 </Border>
-            </TabItem>
-            <TabItem Header="Map &amp; Query">
+            </local:ImageTabItem>
+            <local:ImageTabItem Header="Map &amp; Query" NorImage="img/write_n.png" HorImage="img/map_h.png" DownImage="img/map_ck.png" Style="{DynamicResource ImageTabItemStyle}">
+              <local:ImageTabItem.Background>
+                <SolidColorBrush Opacity="100" />
+              </local:ImageTabItem.Background>
                 <Border Background="GhostWhite" BorderBrush="Gainsboro" BorderThickness="1">
                     <local:GridWithMargins IsSharedSizeScope="True">
                         <Grid.ColumnDefinitions>
@@ -131,7 +158,8 @@
                         
                     </local:GridWithMargins>
                 </Border>
-            </TabItem>
+            </local:ImageTabItem>
         </TabControl>
+        <Button Content="test" Grid.Column="5" Click="Close_Click" Height="15" VerticalAlignment="Top"/>
     </Grid>
 </Window>
