--- a/FileOperatorDotNet/MainWindow.xaml
+++ b/FileOperatorDotNet/MainWindow.xaml
@@ -1,11 +1,13 @@
 ﻿<Window x:Class="FileOperatorDotNet.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" WindowStyle="None"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FileOperatorDotNet"
         mc:Ignorable="d"
-        Title="File Operator" Height="500" Width="800" MouseLeftButtonDown="OnDrag">
+        Title="File Operator" Height="500" Width="800" MouseLeftButtonDown="OnDrag"
+        WindowStyle="None" AllowsTransparency="True" ResizeMode="NoResize"
+        >
     <Window.Resources>
         <Style x:Key="gridMargin" TargetType="Control">
             <Setter Property="Margin" Value="1"/>
@@ -26,19 +28,8 @@
         <Grid.Background>
             <ImageBrush ImageSource="img\back.jpg" />
         </Grid.Background>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*" />
-          <ColumnDefinition Width="1*" />
-          <ColumnDefinition Width="1*" />
-          <ColumnDefinition Width="1*" />
-          <ColumnDefinition Width="1*" />
-          <ColumnDefinition Width="1*" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="50"/>
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <TabControl Grid.ColumnSpan="6" Grid.RowSpan="2" Style="{StaticResource TabCTR1}" Margin="0 0 0 0" VerticalAlignment="Top"> 
+
+        <TabControl Grid.ColumnSpan="6" Grid.RowSpan="2" Style="{StaticResource TabCTR1}" Margin="0 0 0 0"> 
             <local:ImageTabItem  Header="Read" NorImage="img\read_n.png" HorImage="img\read_h.png" DownImage="img\read_ck.png" Style="{DynamicResource ImageTabItemStyle}" >
                 <local:ImageTabItem.Background>
                   <SolidColorBrush Opacity="100" />
@@ -126,7 +117,7 @@
                     </local:GridWithMargins>
                 </Border>
             </local:ImageTabItem>
-            <local:ImageTabItem Header="Map &amp; Query" NorImage="img/write_n.png" HorImage="img/map_h.png" DownImage="img/map_ck.png" Style="{DynamicResource ImageTabItemStyle}">
+            <local:ImageTabItem Header="Map &amp; Query" NorImage="img/map_n.png" HorImage="img/map_h.png" DownImage="img/map_ck.png" Style="{DynamicResource ImageTabItemStyle}">
               <local:ImageTabItem.Background>
                 <SolidColorBrush Opacity="100" />
               </local:ImageTabItem.Background>
@@ -160,6 +151,6 @@
                 </Border>
             </local:ImageTabItem>
         </TabControl>
-        <Button Content="test" Grid.Column="5" Click="Close_Click" Height="15" VerticalAlignment="Top"/>
+        
     </Grid>
 </Window>
