--- a/FileOperatorDotNet/MainWindow.xaml
+++ b/FileOperatorDotNet/MainWindow.xaml
@@ -37,7 +37,7 @@
 
             <local:ImageButton  BNorImage="img\down_n.png" BHorImage="img\close_h.png" BDownImage="img\close_ck.png" Style="{DynamicResource ImageButtonStyle}" DockPanel.Dock="Right" Margin="5 0 5 0" Click="Close_Click"/>
         
-            <local:ImageButton  BNorImage="img\min_n.png" BHorImage="img\min_h.png" BDownImage="img\min_ck.png" Style="{DynamicResource ImageButtonStyle}" DockPanel.Dock="Right" HorizontalAlignment="Right" Margin="5 0 5 0"/>
+            <local:ImageButton  BNorImage="img\min_n.png" BHorImage="img\min_h.png" BDownImage="img\min_ck.png" Style="{DynamicResource ImageButtonStyle}" DockPanel.Dock="Right" HorizontalAlignment="Right" Margin="5 0 5 0" Click="MinBtn_Click"/>
         
         </DockPanel>
         <TabControl Style="{StaticResource TabCTR1}" Margin="0 0 0 0" Grid.Row="1"> 
